tests/errors/compiler/aster_with_row/aster_for_array.c
int main() 
{	
	int arr[10];
	int a;
	a = *arr[1];
	return 0;
}
